--- a/style.css
+++ b/style.css
@@ -77,11 +77,8 @@ p {
 }
 
 .action-links {
+    float: left;
     margin-left: 20px;
-}
-
-.bear-logo {
-    float: right;
 }
 
 .npm-logo, .searchbar {
@@ -95,13 +92,15 @@ p {
 }
 
 .bear-logo {
-    height: 20px;
-    width: 20px;
+    height: 30px;
+    padding-top: 5px;
+    width: 30px;
 }
 
 .search-bar {
     background-color: rgb(31, 82, 111);
     border: none;
+    float: left;
     height: 35px;
     width: 78%;
     padding-left: 10px;
@@ -109,6 +108,7 @@ p {
 .search-button {
     background-color: rgb(31, 82, 111);
     border: none;
+    float: left;
     height: 37px;
     padding: 1px;
     width: 30px;
