--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
     font-family: "Open Sans", OpenSans, sans-serif;
 }
 
+body{
+    margin: 0;
+    padding: 0;
+}
+
 nav {
     background-color: #C12127;
     color: rgba(255,255,255,0.8);
